<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Baccus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="vegabal">Cambiar a Vegabal</string>
    <string name="bembibre">Cambiar a Bembibre</string>
    <string name="wine_description">Una imagen de vino</string>
    <string name="grapes_list_header">Grape Types</string>
    <string name="reload">Recargar</string>
    <string name="gotoweb">Web</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_wine_house">WineHouseActivity</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="wine_name_title">Nombre</string>
    <string name="wine_type_title">Tipo</string>
    <string name="wine_winehouse_title">Bodega</string>
    <string name="wine_rating_title">Valoración</string>

</resources>
