<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.utad.baccus.controller.activity.WineActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        
        <FrameLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:paddingRight="10dp">
    
            <ImageView
	            android:id="@+id/wine_image"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/wine_description"
	            android:scaleType="fitCenter"
	            android:layout_gravity="center" />
	        
	        <ProgressBar 
	            android:id="@+id/loading"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            style="?android:attr/progressBarStyleLarge"/>
	        
        </FrameLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine_name_title"
                style="@style/BaccusText.Title" />
            
            <TextView
                android:id="@+id/wine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaccusText.Feature" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine_type_title"
                style="@style/BaccusText.Title" />
            
            <TextView
                android:id="@+id/wine_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaccusText.Feature" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine_winehouse_title"
                style="@style/BaccusText.Title" />
            
            <TextView
                android:id="@+id/winehouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaccusText.Feature" />

            <TextView
                android:id="@+id/wine_rating_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine_rating_title"
                style="@style/BaccusText.Title" />
            
            <LinearLayout
                android:id="@+id/layaout_stars_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                
                <RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="1"
                    style="@style/WineRatingBar" />

                <Button
                    android:id="@+id/btn_gotoweb"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gotoweb" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/grapes_list_header"
                style="@style/BaccusText.Title" />

            <LinearLayout
                android:id="@+id/grapes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#66000000" >

        <TextView
            android:id="@+id/wine_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BaccusText" />
    </ScrollView>

</LinearLayout>
